--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,398 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Validaciones de formulario</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./4geeks.ico" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <form id="Form" method="post">
+      <div class="container p-2 py-4">
+        <div class="contain-fluid border border-2 border-gray rounded ">
+          <nav class="navbar bg-body-secondary">
+            <div class="container-fluid">
+              <span class="navbar-brand mx-3"
+                ><h3><strong>Payment for example</strong></h3></span
+              >
+            </div>
+          </nav>
+          <div
+            class="contain-fluid p-4 border-top border-bottom border-2 border-gray"
+          >
+            <div class="alert alert-danger" role="alert" id="error-msg">
+              Some fields are missing
+            </div>
+            <div class="container p-0">
+              <div class="row pt-2">
+                <div class="col col-5">
+                  <label for="Card" class="form-label">Card #</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="Card"
+                    placeholder="XXXXXXXXXXXXXXX"
+                    required
+                  />
+                </div>
+                <div class="col col-3">
+                  <label for="cvc" class="form-label">CVC #</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="cvc"
+                    placeholder="0000"
+                    required
+                  />
+                </div>
+                <div class="col col-4">
+                  <label for="Amount" class="form-label">Amount</label>
+                  <div class="input-group mb-2">
+                    <strong>$</strong>
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="Amount"
+                      placeholder="Amount"
+                      required
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="row pt-2">
+                <div class="col-6">
+                  <label for="FirstName" class="form-label">First Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="FirstName"
+                    name="FirstName"
+                    required
+                  />
+                </div>
+                <div class="col-6">
+                  <label for="LastName" class="form-label">Last Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="LastName"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row pt-2">
+                <div class="col col-md-6">
+                  <label for="City" class="form-label">City</label>
+                  <input type="text" class="form-control" id="City" required />
+                </div>
+                <div class="col col-md-3">
+                  <label for="State" class="form-label">State</label>
+                  <select
+                    class="form-control custom-select"
+                    id="State"
+                    required
+                  >
+                    <option class="text-white bg-warning" value="">
+                      Pick a state
+                    </option>
+                    <option value="AL">
+                      Alabama
+                    </option>
+                    <option value="AK">
+                      Alaska
+                    </option>
+                    <option value="AZ">
+                      Arizona
+                    </option>
+                    <option value="AR">
+                      Arkansas
+                    </option>
+                    <option value="CA">
+                      California
+                    </option>
+                    <option value="CO">
+                      Colorado
+                    </option>
+                    <option value="CT">
+                      Connecticut
+                    </option>
+                    <option value="DE">
+                      Delaware
+                    </option>
+                    <option value="DC">
+                      District Of Columbia
+                    </option>
+                    <option value="FL">
+                      Florida
+                    </option>
+                    <option value="GA">
+                      Georgia
+                    </option>
+                    <option value="HI">
+                      Hawaii
+                    </option>
+                    <option value="ID">
+                      Idaho
+                    </option>
+                    <option value="IL">
+                      Illinois
+                    </option>
+                    <option value="IN">
+                      Indiana
+                    </option>
+                    <option value="IA">
+                      Iowa
+                    </option>
+                    <option value="KS">
+                      Kansas
+                    </option>
+                    <option value="KY">
+                      Kentucky
+                    </option>
+                    <option value="LA">
+                      Louisiana
+                    </option>
+                    <option value="ME">
+                      Maine
+                    </option>
+                    <option value="MD">
+                      Maryland
+                    </option>
+                    <option value="MA">
+                      Massachusetts
+                    </option>
+                    <option value="MI">
+                      Michigan
+                    </option>
+                    <option value="MN">
+                      Minnesota
+                    </option>
+                    <option value="MS">
+                      Mississippi
+                    </option>
+                    <option value="MO">
+                      Missouri
+                    </option>
+                    <option value="MT">
+                      Montana
+                    </option>
+                    <option value="NE">
+                      Nebraska
+                    </option>
+                    <option value="NV">
+                      Nevada
+                    </option>
+                    <option value="NH">
+                      New Hampshire
+                    </option>
+                    <option value="NJ">
+                      New Jersey
+                    </option>
+                    <option value="NM">
+                      New Mexico
+                    </option>
+                    <option value="NY">
+                      New York
+                    </option>
+                    <option value="NC">
+                      North Carolina
+                    </option>
+                    <option value="ND">
+                      North Dakota
+                    </option>
+                    <option value="OH">
+                      Ohio
+                    </option>
+                    <option value="OK">
+                      Oklahoma
+                    </option>
+                    <option value="OR">
+                      Oregon
+                    </option>
+                    <option value="PA">
+                      Pennsylvania
+                    </option>
+                    <option value="RI">
+                      Rhode Island
+                    </option>
+                    <option value="SC">
+                      South Carolina
+                    </option>
+                    <option value="SD">
+                      South Dakota
+                    </option>
+                    <option value="TN">
+                      Tennessee
+                    </option>
+                    <option value="TX">
+                      Texas
+                    </option>
+                    <option value="UT">
+                      Utah
+                    </option>
+                    <option value="VT">
+                      Vermont
+                    </option>
+                    <option value="VA">
+                      Virginia
+                    </option>
+                    <option value="WA">
+                      Washington
+                    </option>
+                    <option value="WV">
+                      West Virginia
+                    </option>
+                    <option value="WI">
+                      Wisconsin
+                    </option>
+                    <option value="WY">
+                      Wyoming
+                    </option>
+                  </select>
+                </div>
+                <div class="col col-md-3">
+                  <label for="PostalCode" class="form-label"
+                    >Postal Code
+                  </label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="PostalCode"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row pt-2">
+                <div class="col-6">
+                  <label for="paymentMethods" class="form-label"
+                    >We accept</label
+                  >
+
+                  <div class=" d-flex col-5 bg-secondary rounded p-1">
+                    <div class="form-check form-check-inline mx-2">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        id="mastercard"
+                        value="mastercard"
+                        aria-label="Accept MasterCard"
+                        name="paymentMethods"
+                        checked
+                      />
+                      <label for="mastercard" class="form-check-label">
+                        <i
+                          class="fa-brands fa-cc-mastercard fa-1x text-white"
+                        ></i>
+                      </label>
+                    </div>
+
+                    <div class="form-check form-check-inline mx-2">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        id="visa"
+                        value="visa"
+                        aria-label="Accept Visa"
+                        name="paymentMethods"
+                      />
+                      <label for="visa" class="form-check-label">
+                        <i class="fa-brands fa-cc-visa fa-1x text-white"></i>
+                      </label>
+                    </div>
+
+                    <div class="form-check form-check-inline mx-2">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        id="diners-club"
+                        value="diners-club"
+                        aria-label="Accept Diners Club"
+                        name="paymentMethods"
+                      />
+                      <label for="diners-club" class="form-check-label">
+                        <i
+                          class="fa-brands fa-cc-diners-club fa-1x text-white"
+                        ></i>
+                      </label>
+                    </div>
+
+                    <div class="form-check form-check-inline mx-2">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        id="amazon-pay"
+                        value="amazon-pay"
+                        aria-label="Accept Amazon Pay"
+                        name="paymentMethods"
+                      />
+                      <label for="amazon-pay" class="form-check-label">
+                        <i
+                          class="fa-brands fa-cc-amazon-pay fa-1x text-white"
+                        ></i>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <label for="Msg" class="form-label">Message</label>
+                  <textarea
+                    class="form-control"
+                    id="Msg"
+                    rows="3"
+                    required
+                  ></textarea>
+                  <div id="Help" class="form-text">Add any notes here.</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <footer
+            class="d-grid gap-2 d-md-flex bg-body-secondary justify-content-md-end"
+          >
+            <div class="modal-footer">
+              <button
+                type="reset"
+                id="reset"
+                class="btn btn-secondary mb-2 mt-2"
+                data-bs-dismiss="modal"
+              >
+                <strong>Cancel</strong>
+              </button>
+              <button
+                type="submit"
+                class="btn btn-primary me-4 m-2"
+                id="sendForm"
+              >
+                <strong>Send</strong>
+              </button>
+            </div>
+          </footer>
+        </div>
       </div>
-    </div>
+    </form>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"
+      integrity="sha512-TPh2Oxlg1zp+kz3nFA0C5vVC6leG/6mm1z9+mA81MI5eaUVqasPLO8Cuk4gMF4gUfP5etR73rgU/8PNMsSesoQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="app.js"></script>
   </body>
 </html>
